--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,6 +8,12 @@
   margin-top: 20px;
 }
 
+#map {
+  border: thin solid black;
+  height: 400px;
+  width: 650px;
+}
+
 .center {
   display: block;
   margin-left: auto;
